<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2015 Ushahidi.
  ~ This program is free software: you can redistribute it and/or modify it under
  ~ the terms of the GNU Affero General Public License as published by the Free
  ~ Software Foundation, either version 3 of the License, or (at your option)
  ~ any later version.
  ~
  ~ This program is distributed in the hope that it will be useful, but WITHOUT
  ~ ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS
  ~ FOR A PARTICULAR PURPOSE. See the GNU Affero General Public License for more details.
  ~
  ~ You should have received a copy of the GNU Affero General Public License
  ~ along with this program in the file LICENSE-AGPL. If not, see
  ~ https://www.gnu.org/licenses/agpl-3.0.html
  -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:ushApp="http://schemas.android.com/apk/res-auto"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0px"
            android:layout_weight="1">
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center_horizontal"
                android:padding="@dimen/view_spacing_normal"
                android:animateLayoutChanges="true">
            <com.addhen.android.raiburari.presentation.ui.widget.FontSupportedTextView
                    android:id="@+id/textview_deployment_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/add_deployment_description_hint"
                    android:padding="@dimen/view_spacing_normal"
                    android:textStyle="bold"
                    android:textAppearance="@android:style/TextAppearance.Medium"
                    ushApp:fontFile="RobotoCondensed-Regular.ttf"/>
            <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/view_spacing_normal">
                <EditText
                        android:id="@+id/add_deployment_title"
                        style="@style/EditText.Name"
                        android:hint="@string/add_deployment_title_hint"
                        android:imeOptions="actionNext"
                        android:nextFocusDown="@+id/add_deployment_url"/>
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/view_spacing_normal">
                <EditText
                        android:id="@+id/add_deployment_url"
                        style="@style/EditText.URL"
                        android:hint="@string/add_deployment_url_hint"
                        android:layout_gravity="center"
                        android:imeOptions="actionDone"/>
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>
    </ScrollView>
    <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/dividerVertical"/>
    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            style="?android:buttonBarStyle">
        <Button
                android:id="@+id/add_deployment_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:text="@string/cancel"
                android:textColor="@color/red"
                style="?android:buttonBarButtonStyle"
                android:layout_toStartOf="@+id/add_deployment_add"
                android:layout_centerVertical="true"
                android:layout_toLeftOf="@+id/add_deployment_add"/>
        <Button
                android:id="@+id/add_deployment_add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_alignParentEnd="true"
                android:text="@string/update"
                style="?android:buttonBarButtonStyle"/>
    </RelativeLayout>
</LinearLayout>